Fixes height of main nav on mobile and tablet

--- a/styleguide/source/assets/scss/03-organisms/_main-navigation.scss
+++ b/styleguide/source/assets/scss/03-organisms/_main-navigation.scss
@@ -5,12 +5,16 @@
   position: relative;
   z-index: 501;
 
+  @include breakpoint($bp-small min-width) {
+    height: 61px;
+  }
+
   .container {
     position: relative;
     display: flex;
     align-items: center;
     padding-right: 0;
-    min-height: 60px;
+    min-height: 61px;
 
     @include breakpoint($bp-small min-width) {
       @include gutter($padding-right-half...);
@@ -114,7 +118,7 @@
 
   &__join--links {
     text-align: right;
-    padding: $gutter;
+    padding: 0 $gutter;
     max-width: 90px;
     font-size: 14px;
     line-height: 1em;
@@ -124,6 +128,7 @@
       @include gutter($margin-left-full...);
       display: block;
       width: 65px;
+      padding: 0 $gutter;
     }
 
     @include breakpoint($bp-large min-width) {
